--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -36,3 +36,17 @@ jobs:
         #   FILE_KEY: ${{ secrets.FILE_KEY }}
         run: |
           dvc repro
+
+
+       # 🔵 Azure Login
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # 🐳 Build and push Docker image to ACR
+      - name: Build Docker image
+        run: |
+          docker build -t ${{ secrets.AZURE_CONTAINER_REGISTRY }}/flaskapp:latest .
+          echo ${{ secrets.ACR_PASSWORD }} | docker login ${{ secrets.AZURE_CONTAINER_REGISTRY }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
+          docker push ${{ secrets.AZURE_CONTAINER_REGISTRY }}/flaskapp:latest
